--- a/todo1.html
+++ b/todo1.html
@@ -207,20 +207,15 @@ margin-left: 1rem;
         </div>
         </div>
 
-        <div class="task">
+<!--         <div class="task">
           <div class="content">Walk the dog</div>
           <div class="action">
             <button class="button">DELETE</button>
           </div>
-          </div>
+          </div> -->
 
          
-      <div class="task">
-        <div class="content">Do the laundry</div>
-        <div class="action">
-          <button class="button">DELETE</button>
-        </div>
-      </div>
+      
     </ul>
     <button class="clear task content">Clear All</button>
 
